fix: align margins

--- a/css/styles.css
+++ b/css/styles.css
@@ -230,6 +230,7 @@ a:hover {
 
   .mainpara {
     margin-right: 0;
+    margin-left: 17.5px;
   }
 }
 
